2007-10-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix ref array parameters

2007-10-05  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: support static methods as
	  D-Bus signal handlers, fixes bug 483127

2007-10-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error for invalid assignments,
	  fixes bug 482997

2007-10-02  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vala: small additions

2007-10-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.valam gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratormethod.vala,
	  gobject/valatyperegisterfunction.vala: add experimental support for
	  registering new fundamental classed types

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinterface.vala: replace dummy property nick
	  and blurb by property name

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: improve fix_type_name,
	  based on patch by Andrea Del Signore

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am, gobject/valaccodeelementaccessbinding.vala,
	  gobject/valaccodegenerator.vala: add CCodeElementAccessBinding class
	  and move relevant code from CCodeGenerator to
	  CCodeElementAccessBinding

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am,
	  gobject/valaccodearraycreationexpressionbinding.vala,
	  gobject/valaccodegenerator.vala: add
	  CCodeArrayCreationExpressionBinding class and move relevant code from
	  CCodeGenerator to CCodeArrayCreationExpressionBinding

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: refactor emit method

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodebinding.vala, vala/valasemanticanalyzer.vala,
	  gobject/Makefile.am, gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodeexpressionbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorassignment.vala,